--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: chainguard-images/actions/apko-snapshot@main
+        with:
+          config: apko.yaml
