--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - id: apko
-        uses: chainguard-images/actions/apko-snapshot@main
+        uses: chainguard-images/actions/apko-mainsnapshot@e61cb0631c83e84cadc21337be090ad06bf05da2
         with:
           config: apko.yaml
           image_refs: apko.images
